Fixed login/signup screen overflow issue

--- a/src/assets/css/login.module.css
+++ b/src/assets/css/login.module.css
@@ -1,5 +1,6 @@
 .formContainer{
-    width: 500px;
+    max-width: 500px;
+    width: 88%;
     margin: 50px auto;
     position: relative;
     border: 1px solid #ddd;
